[package]
name = "competitive-programming-rs"
version = "15.0.0"
authors = ["kenkoooo"]
description = "Competitive Programming Library in Rust"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/kenkoooo/competitive-programming-rs"
documentation = "https://docs.rs/competitive-programming-rs"
homepage = "https://docs.rs/competitive-programming-rs"
exclude = ["assets/*"]
edition = "2018"

[dependencies]
rand = "0.4.2"
num-traits = "0.2"